# spaced-programming

./: .env  Cargo.toml  LICENCE  README.md
database/: core.db
doc/: free_thought.md
migrations/2022-05-24-130257_create_items/: up.sql
migrations/2022-05-25-140208_create_schedule/: down.sql  up.sql
migrations/2022-05-25-151457_create_new/: down.sql  up.sql
src/: app_state.rs  constants.rs  database.rs  error.rs  main.rs  scheduler.rs  schema.rs  screens.rs  types.rs
