[package]
name = "spaced-programming"
version = "0.1.0"
edition = "2021"
keywords = ["spaced", "tui", "supermemo", "learn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spaced-rs = "0.1.1"
tui = "0.18"
crossterm = "0.23"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = "1.4.0"
