[package]
name = "spaced-programming"
version = "0.1.0"
edition = "2021"
keywords = ["spaced", "tui", "supermemo", "learn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
rand = "0.8.5"
rusqlite = "0.27.0"
