[package]
name = "spaced-programming"
version = "0.1.0"
edition = "2021"
keywords = ["spaced", "tui", "supermemo", "learn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spaced-rs = "0.2.0"
tui = "0.18"
crossterm = "0.23"
rand = "0.8.5"
rusqlite = "0.27.0"

[dev-dependencies]
serial_test = "0.7.0"